--- a/files-handler-core/templates/template.html
+++ b/files-handler-core/templates/template.html
@@ -1,8 +1,93 @@
-<?php 
-$templateHTML ='
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Certificado de Retención en la Fuente</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            border-style: solid;            
+        }
+
+        .header {
+            text-align: center;
+            border-bottom: 2px solid;
+        }  
+
+        .content {
+            margin: 20px;
+            align-items: center;
+            justify-content: center;
+            border-width: 100%;        
+        }
+
+        .section {
+            margin-bottom: 20px;            
+        }
+
+        .section-title {
+            font-weight: bold;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+        }
+
+        .table {
+            width: 100%;
+            border-collapse: collapse;
+            border-style: solid;
+            border-bottom: 2px solid;
+        }
+
+        .table th,
+        .table td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+            border-style: solid;
+            border-bottom: 2px solid;
+        }
+
+        .footer {
+            text-align: left;
+            border-style: solid;                    
+        }    
+        .logo{
+            width: 30%;
+            height: 40%;
+        }
+        .middle{
+            border-style: solid;
+        }
+
+        .table-middel{
+            justify-content:center; 
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            width: 100%;
+            border-collapse: collapse;             
+        }
+
+        .table-middel th,
+        .table-middel td {
+            padding: 6px; 
+            text-align: left;
+            border-style: solid;            
+        }
+        body p{
+            font-size: large;
+        }
+        body .disclamer p{
+            font-size: small;
+        }
+    </style>
+</head>
+
 <body>
     <div class="header">
-    <img src="../logoapex.png" alt="logo" class="logo"/>        
+        <img src="logoapex.png" alt="logo" class="logo"/>        
     </div>
     <div class="content">
         <div class="section">
@@ -61,6 +146,4 @@ $templateHTML ='
         <p>FECHA DE EXPEDICIÓN: <strong> 26/01/2023 </strong></p>
     </div>
 </body>
-';
-
-?>
+</html>
